Fixed Overlapping sections on mobiles

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -84,3 +84,11 @@ h1,h2,h3,h4,h5,h6 {
 .section-heading {
     margin-top: 0;
 }
+
+section {
+    display: block;
+}
+
+header {
+    display: block;
+}
